--- a/vscode-settings/settings.json
+++ b/vscode-settings/settings.json
@@ -1,34 +1,48 @@
 {
-    "window.zoomLevel": 1,
-    "editor.tabSize": 2,
-    "editor.quickSuggestions": {
-      "other": false,
-      "comments": false,
-      "strings": false
-    },
-    "editor.autoClosingBrackets": "never",
-    "html.autoClosingTags": false,
-    "breadcrumbs.enabled": true,
-    "typescript.check.npmIsInstalled": false,
-    "typescript.autoClosingTags": false,
-    "typescript.format.enable": false,
-    "typescript.format.insertSpaceAfterCommaDelimiter": false,
-    "typescript.format.insertSpaceAfterFunctionKeywordForAnonymousFunctions": false,
-    "typescript.format.insertSpaceAfterKeywordsInControlFlowStatements": false,
-    "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": false,
-    "typescript.format.insertSpaceAfterSemicolonInForStatements": false,
-    "typescript.format.insertSpaceBeforeAndAfterBinaryOperators": false,
-    "typescript.reportStyleChecksAsWarnings": false,
-    "typescript.suggest.autoImports": false,
-    "typescript.suggest.paths": false,
-    "typescript.suggest.enabled": false,
-    "typescript.surveys.enabled": false,
-    "typescript.suggestionActions.enabled": false,
-    "typescript.tsc.autoDetect": "off",
-    "javascript.autoClosingTags": false,
-    "javascript.suggest.enabled": false,
-    "javascript.validate.enable": false,
-    "typescript.validate.enable": false,
-    "git.ignoreMissingGitWarning": true,
-    "gitlens.mode.active": "zen"
+  "window.zoomLevel": 0,
+  "editor.tabSize": 2,
+  "editor.quickSuggestions": {
+    "other": false,
+    "comments": false,
+    "strings": false
+  },
+  "editor.autoClosingBrackets": "never",
+  "html.autoClosingTags": false,
+  "breadcrumbs.enabled": true,
+  "typescript.check.npmIsInstalled": false,
+  "typescript.autoClosingTags": false,
+  "typescript.format.enable": false,
+  "typescript.format.insertSpaceAfterCommaDelimiter": false,
+  "typescript.format.insertSpaceAfterFunctionKeywordForAnonymousFunctions": false,
+  "typescript.format.insertSpaceAfterKeywordsInControlFlowStatements": false,
+  "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBraces": false,
+  "typescript.format.insertSpaceAfterSemicolonInForStatements": false,
+  "typescript.format.insertSpaceBeforeAndAfterBinaryOperators": false,
+  "typescript.reportStyleChecksAsWarnings": false,
+  "typescript.suggest.autoImports": false,
+  "typescript.suggest.paths": false,
+  "typescript.suggest.enabled": false,
+  "typescript.surveys.enabled": false,
+  "typescript.suggestionActions.enabled": false,
+  "typescript.tsc.autoDetect": "off",
+  "javascript.autoClosingTags": false,
+  "javascript.suggest.enabled": false,
+  "javascript.validate.enable": false,
+  "typescript.validate.enable": false,
+  "git.ignoreMissingGitWarning": true,
+  "gitlens.mode.active": "zen",
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "diffEditor.ignoreTrimWhitespace": false,
+  "git.suggestSmartCommit": false,
+  "terminal.integrated.shell.windows": "C:\\windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
+  "bracket-pair-colorizer-2.showBracketsInGutter": true,
+  "autoimport.filesToScan": "**/*.{ts,tsx,js,css}",
 }
